pacman.conf extra 2 lines

--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -113,3 +113,7 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+[prime_repo]
+SigLevel = Optional TrustedOnly
+Server = https://teachingarco.github.io/$repo/$arch
